# Microgrid-Modeling

./: .gitignore  README.md
Community Load Profiles/: .env.example  README.md  __init__.py  docker-compose.yml  pyproject.toml
Community Load Profiles/api/: .env.example  README.md  alembic.ini  pyproject.toml
Community Load Profiles/api/alembic/: env.py
Community Load Profiles/api/alembic/versions/: 20260131_0036_create_configs.py  20260131_0050_create_runs.py
Community Load Profiles/api/microgrid_api/: __init__.py  db.py  main.py  models.py  run_schemas.py  run_worker.py  schemas.py  settings.py
Community Load Profiles/api/tests/: test_configs.py  test_health.py  test_runs.py
Community Load Profiles/config/: config.yaml
Community Load Profiles/data/sources/: oedi_manifest.json  oedi_manifest.yaml
Community Load Profiles/notebooks/: backup.py  community_microgrid_load_profiles.ipynb  community_microgrid_load_profiles_comstock.ipynb  community_microgrid_load_profiles_restock.ipynb  refactored_demo.ipynb  temperature.ipynb  testing.ipynb
Community Load Profiles/scripts/: download_inputs.sh  download_oedi.py  reset_db.sh  run_api.sh  run_pipeline.py  run_tests.sh  setup_db.sh  setup_dev.sh  test_download_oedi.py
Community Load Profiles/src/microgrid_profiles/: __init__.py  cli.py  config.py  io.py  paths.py  pipeline.py  selection.py  transforms.py  viz.py  (+1 more)
Community Load Profiles/tests/: test_aggregations.py  test_profiles.py  test_weather.py
Community Load Profiles/web/: README.md  jest.config.cjs  package-lock.json  package.json  tsconfig.json
(+10 files in other folders)
